# mdgo

./: .gitignore  README.md  index.html  index_cdn.html  pyproject.toml
backend/: main.py  restart.bat  restart.sh  stop.bat  stop.sh
backend/service/: config.py  graphql_schema.py  system_monitor_service.py  system_service.py  websocket_service.py
backend/service/util/: file_scan.py
css_js/cdn/: graphiql.min.js  jsmind.draggable-node.js  jsonTree.js
docs/superpowers/plans/: 2026-06-25-canvas-enhancement-plan.md
docs/superpowers/specs/: 2026-06-25-canvas-enhancement-design.md
frontend/: main.html  main_cdn.html
frontend/css_js/cdn/: github-markdown-light.min.css  mono-font.css  standalone.min.js  swagger-editor.min.css
server/: main.py  start.bat  start.sh
server/extension/: bookmark-sync.crx  bookmark-sync.pem
server/extension/bookmark-sync/: background.js  manifest.json  popup.html  popup.js
server/service/: bookmark_service.py  config.py  graphql_schema.py  system_service.py  websocket_service.py
server/service/util/: file_scan.py
server/static/: main.html  main_cdn.html
server/static/css_js/cdn/: artplayer.min.js  cronstrue-i18n.min.js  excalidraw.production.min.js  lunar.min.js  mermaid.min.js  swagger-editor-standalone-preset.min.js
server/static/subindex/: bookmarks-graph.html
