[project]
name = "mdgo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn==0.32.0",
    "requests==2.33.0",
    "beautifulsoup4==4.12.3",
    "trafilatura==1.12.2",
    "jieba==0.42.1",
    "strawberry-graphql[fastapi]==0.316.0",
    "psutil>=6.0.0",
    "websockets==16.0",
    "wsproto==1.3.2" 
]

[tool.uv]